--- a/contact_me/pubspec.yaml
+++ b/contact_me/pubspec.yaml
@@ -19,3 +19,12 @@ flutter:
   uses-material-design: true
   assets:
     - images/
+
+  fonts:
+    - family: Pacifico
+      fonts:
+      - asset: fonts/Pacifico-Regular.ttf
+
+    - family: Source Sans Pro
+      fonts:
+      - asset: fonts/SourceSansPro-Regular.ttf
