--- a/magic_8_ball/pubspec.yaml
+++ b/magic_8_ball/pubspec.yaml
@@ -19,9 +19,8 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - images/
 
   # fonts:
   #   - family: Schyler
