--- a/xylophone/pubspec.yaml
+++ b/xylophone/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
+  audioplayers: ^0.13.7
 
 dev_dependencies:
   flutter_test:
@@ -20,13 +21,5 @@ flutter:
 
   uses-material-design: true
 
-  # assets:
-  #  - images/a_dot_burr.jpeg
-
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
+  assets:
+    - assets/
