--- a/weather/pubspec.yaml
+++ b/weather/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   geolocator: ^5.2.0
   http: ^0.12.0+4
+  flutter_spinkit: "^4.1.1"
 
 dev_dependencies:
   flutter_test:
