--- a/chat/pubspec.yaml
+++ b/chat/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
+  animated_text_kit: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -21,3 +22,11 @@ flutter:
 
   assets:
   - images/
+
+  fonts:
+    - family: Pinyon
+      fonts:
+        - asset: fonts/PinyonScript-Regular.ttf
+    - family: Handlee
+      fonts:
+        - asset: fonts/Handlee-Regular.ttf
