--- a/chat/pubspec.yaml
+++ b/chat/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_auth: ^0.15.4
   cloud_firestore: ^0.13.0+1
   modal_progress_hud: ^0.1.3
+  time_formatter: ^1.0.0+5
 
 dev_dependencies:
   flutter_test:
