--- a/todoey/pubspec.yaml
+++ b/todoey/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
 
   cupertino_icons: ^0.1.3
   provider: ^4.0.4
+  shared_preferences: ^0.5.6+2
 
 dev_dependencies:
   flutter_test:
